# alias

./: .env.example  .gitignore  CONFIGURATION.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: README.md  test.yml
docs/source/: conf.py  index.rst
docs/source/documentation/: dataset.rst  embedding.rst  index.rst  model.rst  plotting.rst  training.rst
notebooks/: README.md  demo_training_pipeline.ipynb
src/: setup_alias.sh
src/alias/data/: build_datasets.py  ncbi.py  scrna.py  triplet_generation.py
src/alias/evaluation/: __init__.py  celltype_label.plots.py  celltype_label_similarity.py  embedding.py  functionality_cell_similarity.py  functionality_cell_similarity_cellwhisperer.py
src/alias/model/: __init__.py  training.py
src/alias/util/: cell_sentence_templates.py  config_loader.py  hard_negative_mining.py  hf_config.py  load_hf_model.py  similarity.py  similarity_cellwhisperer.py
src/alias/util/plots/: color_definition.py  plot_colors.py  pub_style.py  umap_plots.py
src/data/: __init__.py  build_datasets.py  scrna.py  triplet_generation.py
src/evaluation/: celltype_label_similarity.py  embedding.py  functionality_cell_similarity.py  functionality_cell_similarity_cellwhisperer.py  umap_plots.py
src/model/: __init__.py  training.py
src/util/: hf_config.py  similarity.py  similarity_cellwhisperer.py
src/util/plots/: color_definition.py  plot_colors.py  umap_plots.py
tests/: README.md  conftest.py  fixtures.py  test_configs.py  test_data_processing.py  test_dependencies.py  test_hard_negative_mining.py  test_imports.py  test_integration_pipeline.py  test_training.py
