[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "adjusttext>=1.3.0",
    "anndata>=0.12.6",
    "biopython>=1.86",
    "datasets>=4.4.1",
    "python-dotenv>=1.2.1",
    "scanpy>=1.11.5",
    "sentence-transformers>=5.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.1",
]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
