[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.11.0",
    "adjusttext>=1.3.0",
    "anndata>=0.12.6",
    "biopython>=1.86",
    "datasets>=4.4.1",
    "python-dotenv>=1.2.1",
    "scanpy>=1.11.5",
    "sentence-transformers>=5.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.1",
]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_env: marks tests that require .env configuration",
    "integration: marks integration tests with real data (slower)",
]
